force-app/main/default/objects/Cuidarnos__mdt/Cuidarnos__mdt.object-meta.xml
<CustomObject>
    <label>Cuidarnos</label>
    <pluralLabel>Cuidarnos</pluralLabel>
</CustomObject>