force-app/main/default/objects/Cuidarnos__mdt/fields/Admin_Level_0__c.field-meta.xml
<CustomField>
    <fullName>Admin_Level_0__c</fullName>
    <label>Admin Level 0</label>
    <length>3</length>
    <type>Text</type>
</CustomField>