force-app/main/default/objects/Cuidarnos__mdt/fields/Admin_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Admin_Level_2__c</fullName>
    <label>Admin Level 2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>