force-app/main/default/objects/Cuidarnos__mdt/fields/Allowed_API_Users__c.field-meta.xml
<CustomField>
    <fullName>Allowed_API_Users__c</fullName>
    <label>Allowed API Users</label>
    <length>255</length>
    <type>Text</type>
</CustomField>