force-app/main/default/objects/Cuidarnos__mdt/fields/Dashboard_Sintomas__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Sintomas__c</fullName>
    <label>Dashboard Sintomas</label>
    <length>18</length>
    <type>Text</type>
</CustomField>