force-app/main/default/objects/Cuidarnos__mdt/fields/Dashboard_Territorial__c.field-meta.xml
<CustomField>
    <fullName>Dashboard_Territorial__c</fullName>
    <label>Dashboard Territorial</label>
    <length>18</length>
    <type>Text</type>
</CustomField>