force-app/main/default/objects/Cuidarnos__mdt/fields/DashboardId__c.field-meta.xml
<CustomField>
    <fullName>DashboardId__c</fullName>
    <label>DashboardId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>