force-app/main/default/objects/Cuidarnos__mdt/fields/Filter_by_County__c.field-meta.xml
<CustomField>
    <fullName>Filter_by_County__c</fullName>
    <label>Filtros por localidad</label>
    <length>255</length>
    <type>Text</type>
</CustomField>