force-app/main/default/objects/Cuidarnos__mdt/fields/Iframe_Url__c.field-meta.xml
<CustomField>
    <fullName>Iframe_Url__c</fullName>
    <label>Iframe Url</label>
    <type>Url</type>
</CustomField>