force-app/main/default/objects/Cuidarnos__mdt/fields/Label_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Label_Identifier__c</fullName>
    <defaultValue>&apos;Id&apos;</defaultValue>
    <label>Label Identifier</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hash</fullName>
                <default>true</default>
                <label>Hash</label>
            </value>
            <value>
                <fullName>Id</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>