force-app/main/default/objects/Cuidarnos__mdt/fields/Notification_SMS_1__c.field-meta.xml
<CustomField>
    <fullName>Notification_SMS_1__c</fullName>
    <label>Notification SMS 1</label>
    <type>TextArea</type>
</CustomField>