force-app/main/default/objects/Cuidarnos__mdt/fields/Notification_SMS_2__c.field-meta.xml
<CustomField>
    <fullName>Notification_SMS_2__c</fullName>
    <label>Notification SMS 2</label>
    <type>TextArea</type>
</CustomField>