force-app/main/default/objects/Cuidarnos__mdt/fields/Notification_SMS_3__c.field-meta.xml
<CustomField>
    <fullName>Notification_SMS_3__c</fullName>
    <label>Notification SMS 3</label>
    <type>TextArea</type>
</CustomField>