force-app/main/default/objects/Cuidarnos__mdt/fields/SMS_Keyword__c.field-meta.xml
<CustomField>
    <fullName>SMS_Keyword__c</fullName>
    <label>SMS Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>