force-app/main/default/objects/Cuidarnos__mdt/fields/SMS_Message__c.field-meta.xml
<CustomField>
    <fullName>SMS_Message__c</fullName>
    <label>SMS Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>