force-app/main/default/objects/Cuidarnos__mdt/fields/SMS_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>SMS_Message_Id__c</fullName>
    <label>SMS Message Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>