force-app/main/default/objects/Cuidarnos__mdt/fields/SMS_Send_Covid_Detail_Info__c.field-meta.xml
<CustomField>
    <fullName>SMS_Send_Covid_Detail_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Send Covid Detail Info</label>
    <type>Checkbox</type>
</CustomField>