force-app/main/default/objects/Cuidarnos__mdt/fields/SMS_Send_Enabled__c.field-meta.xml
<CustomField>
    <fullName>SMS_Send_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Send Enabled</label>
    <type>Checkbox</type>
</CustomField>