force-app/main/default/objects/Cuidarnos__mdt/fields/SMS_Sends__c.field-meta.xml
<CustomField>
    <fullName>SMS_Sends__c</fullName>
    <label>SMS Sends</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>